<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_popup_background"
    android:paddingStart="40dp"
    android:paddingTop="40dp"
    android:paddingEnd="40dp"
    android:paddingBottom="40dp"
    tools:context=".EditUserFragment">

    <TextView
        android:id="@+id/txvEditUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/poppins"
        android:text="@string/editUser"
        android:textAlignment="textStart"
        android:textColor="@color/dark_grey"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txvEditUser2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txvEditUser"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/poppins"
        android:text="@string/editUser2" />

    <EditText
        android:id="@+id/txt_user_name_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txvEditUser"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="60dp"
        android:autofillHints="username"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/txt_email_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_user_name_edit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/Email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txt_psw_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_email_edit"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:ems="10"
        android:fontFamily="@font/poppins"
        android:hint="@string/Password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switchEditPrimaryUser"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelEditUser"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/poppins"
            android:insetLeft="0dp"
            android:text="@string/Cancel"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/cancel" />

        <Button
            android:id="@+id/btnSaveUserInfo"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@drawable/rounded_button"
            android:fontFamily="@font/poppins"
            android:text="@string/save"
            android:textColor="@android:color/white"
            app:backgroundTint="@color/main" />
    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchEditPrimaryUser"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/txt_psw_edit"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:text="@string/primary_user" />

</RelativeLayout>