<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp">


        <TextView
            android:id="@+id/textHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:padding="5dp"
            android:text="@string/txt_MonthYear"
            android:textAlignment="center"
            android:textColor="@color/dark_grey"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:id="@+id/linlaymonthyear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnMonthBack"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/icon_back"
                android:contentDescription="@string/previous_month"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtMonthYearHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/poppins"
                android:padding="5dp"
                android:text="@string/txt_MonthYear"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMonthForward"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/icon_next"
                android:contentDescription="@string/next_month"
                android:padding="20dp"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlaybudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linlaymonthyear">

            <TextView
                android:id="@+id/txt_MonthlyBudgetName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:text="@string/monthly_budget"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtMonthlyBudetNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_300"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linlayimages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:elevation="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linlaystatus"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linlaybudget">

            <ImageView
                android:id="@+id/ivkalenteri"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:elevation="6dp"
                app:srcCompat="@drawable/calendar"
                android:contentDescription="@string/calendar_image" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:elevation="6dp"
                android:paddingStart="15dp"
                android:paddingEnd="0dp"
                app:srcCompat="@drawable/spent"
                android:contentDescription="@string/image_spent" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:elevation="6dp"
                app:srcCompat="@drawable/left"
                android:contentDescription="@string/arrow_left" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlaystatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-26dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linlayimages"
            android:baselineAligned="false">

            <!-- Days left -->

            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:background="@drawable/element_background_orange"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_daysleftname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_daysleft"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_daysleft"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_8_30"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Money spent -->
            <LinearLayout
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/element_background_orange"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/txt_moneyspentname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_moneyspent"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txt_moneyspent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_736"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!-- Money left -->
            <LinearLayout
                android:id="@+id/moneyleftBackground"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:background="@drawable/element_background_orange"
                android:elevation="2dp"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:id="@+id/txt_moneyleftname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_moneyleft"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtMoneyLeftHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_506"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/BarChartHome"
            android:layout_width="389dp"
            android:layout_height="220dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linlaystatus" />

        <Button
            android:id="@+id/btn_addNew"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_button"
            android:drawableEnd="@drawable/icon_add2"
            android:elevation="2dp"
            android:fontFamily="@font/poppins"
            android:gravity="center_vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/btn_addNew"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/BarChartHome" />

        <TextView
            android:id="@+id/Treattext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="26dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:padding="5dp"
            android:text="@string/txt_Treat"
            android:textAlignment="center"
            android:textColor="@color/dark_grey"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_addNew" />


        <ProgressBar
            android:id="@+id/progressBar2"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="270dp"
            android:layout_height="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:indeterminateDrawable="@drawable/progress_bar_custom"
            android:max="100"
            android:progress="20"
            android:progressDrawable="@drawable/progress_bar_custom"
            android:progressTint="@color/main"
            app:layout_constraintEnd_toStartOf="@+id/ivTreat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Treattext2" />

        <TextView
            android:id="@+id/progressText2"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="156dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins"
            android:text="@string/_20"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Treattext2" />

        <ImageView
            android:id="@+id/ivTreat"
            android:layout_width="73dp"
            android:layout_height="62dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/treat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/progressBar2"
            app:layout_constraintTop_toBottomOf="@+id/btn_addNew"
            android:contentDescription="@string/treatPicture" />

        <TextView
            android:id="@+id/txt_lastpaymentsname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="18dp"
            android:layout_weight="1"
            android:fontFamily="@font/poppins"
            android:padding="5dp"
            android:text="@string/txt_lastpay"
            android:textAlignment="center"
            android:textColor="@color/dark_grey"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtGoalAchieved" />

        <ScrollView
            android:id="@+id/sv_lastpayments_home"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/last_payments_listed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_lastpaymentsname"
            tools:ignore="NestedScrolling">

            <LinearLayout
                android:id="@+id/linLastpaymentsHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:orientation="vertical" />
        </ScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bg_grey"
            android:layout_width="500dp"
            android:layout_height="500dp"
            android:layout_marginStart="-160dp"
            android:layout_marginTop="-160dp"
            android:elevation="-10dp"
            app:cardBackgroundColor="@color/light_grey"
            app:cardCornerRadius="300dp"
            app:cardElevation="-10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtGoalAchieved"
            android:layout_width="270dp"
            android:layout_height="0dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/progressBar2"
            app:layout_constraintStart_toStartOf="@+id/progressBar2"
            app:layout_constraintTop_toBottomOf="@+id/progressBar2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>